# mcp-financial-server

./: .env.example  README.md  pyproject.toml  run_server.sh
database/: schema.sql  seed.sql  seed_script.py
src/: main.py
src/config/: env.py
src/db/: client.py  queries.py
src/tools/: analyst_tools.py  company_tools.py  financial_tools.py  sector_tools.py  stock_tools.py
src/utils/: errors.py  formatters.py  rate_limiter.py
src/validators/: input_validator.py
tests/: test_live.py  test_tools.py
